# deguchikai

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: main.yaml
src/: App.css  App.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resource/: resource.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/slide/: video.rs  video_option.rs
src/components/: update-rows.tsx  update-slide.tsx
