[package]
name = "tauri-with-voice"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_with_voice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

env_logger = "0.11.6"
log = "0.4.26"
uuid = { version = "1.15.1", features = ["v4"] }
tokio = { version = "1.43.0", features = ["full"] }
dotenv = "0.15.0"
chrono = "0.4.40"
voicevox-client = "0.1.1"
reqwest = { version = "0.12.12", features = ["json"] }
